# see-see

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG  README.md  README_EN.md  README_KR.md  com.seesee.desktop.metainfo.xml  daemon.html  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts  wdio.conf.ts
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: package.yml
.scripts/popclip/: Config.plist  Pot.sh  build.sh
.scripts/snipdo/: build.sh  pot.json
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  (+1 more)
src/: App.tsx  i18n.ts  ipc.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  webview.arm64.json  webview.x64.json  webview.x86.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: analysis.rs  backup.rs  capture.rs  cmd.rs  commands.rs  config.rs  credentials.rs  database.rs  error.rs  history.rs  lib.rs  main.rs  screenshot.rs  server.rs  settings.rs  state.rs  system_ocr.rs  tray.rs  updater.rs  window.rs
src-tauri/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src-tauri/tests/: analysis_flow.rs  capture_flow.rs  desktop_lifecycle.rs  foundation.rs  history_benchmark.rs  history_integration.rs  model_config.rs  prompt_presets.rs  provider_contracts.rs  storage_foundation.rs
updater/: updater.mjs
(+89 files in other folders)
