[package]
name = "see-see"
version = "0.2.0"
description = "See See multimodal screenshot translator"
authors = ["See See contributors"]
edition = "2024"

[lib]
name = "see_see_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
base64 = "0.22"
eventsource-stream = "0.2"
futures-util = "0.3"
image = "0.25"
keyring = "3"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
xcap = "0.9"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
